# aocparser

./: README.md  pyproject.toml
src/aocparser/: __init__.py  dsl.py  elements.py  grammar_constructor.py  parse.py  result.py
tests/: aoctests.py
